--- a/index.html
+++ b/index.html
@@ -12,7 +12,56 @@
 </div>
 
 <div id="main">
-<p>(very much to-do)</p>
+<h2>Introduction</h2>
+<p>FPRLogoViewer allows you to view logos from Fire Pro Wrestling Returns save data.</p>
+
+<h2>Requirements</h2>
+<ul>
+<li>.NET Framework v2.0 (so it should hopefully work in Wine)</li>
+</ul>
+
+<h2>Supported Formats</h2>
+<p>There are a myriad of PS2 save formats out there, and FPRLogoViewer only
+supports a few of them.</p>
+<ul>
+<li><strong>EMS Memory Linker</strong> (.psu) &ndash; A single game save, 952,320 bytes in length.</li>
+<li>
+	<strong>Raw save data</strong> &ndash; Raw save data (913,892 bytes length)
+	ripped from the memory card. Typically has one of three names depending on
+	the game/save region:
+	<ul>
+	<li><strong>BISLPM-66082</strong> &ndash; NTSC-J/Japanese</li>
+	<li><strong>BASLUS-21702</strong> &ndash; NTSC-U/North American</li>
+	<li><strong>BESLES-55041</strong> &ndash; PAL/Europe</li>
+	</ul>
+</li>
+<li><strong>Raw logo rips</strong> (.bin) &ndash; 16,656 bytes of logo data,
+ripped from a save file.</li>
+</ul>
+
+<h2>Usage</h2>
+<p>(todo)</p>
+
+<h3>Default View</h3>
+<img src="program_init.png" title="Default View" />
+<p>The default view upon starting the program.</p>
+
+<h3>Open Logo</h3>
+<p>The File &rarr; Open menu item allows you to open a supported file format
+containing one or more Fire Pro Wrestling Returns logos.</p>
+
+<h3>Save Logo</h3>
+<p>The File &rarr; Save menu item allows you to export the logo to a PNG file.</p>
+
+<h3>Logo View</h3>
+<img src="program_view.png" title="Logo View" />
+<p>When a logo is loaded,</p>
+
+<h3>Select Logo</h3>
+<p>When opening a save file, you can choose what logo is loaded.</p>
+<img src="dialog_selectlogo.png" title="Select Logo dialog" alt="The Select Logo dialog contains a list of six items, 'Logo 1' to 'Logo 6', giving the status of each logo as 'Logo Exists' or 'No Logo'. (In this instance, the first five logos are filled (marked 'Logo Exists'), and Logo 6 is marked 'No Logo'.) Below the listbox are two buttons, 'OK' and 'Cancel'." />
+<p>&nbsp;</p>
+
 </div>
 
 <div id="footer">
